--- a/src/Components/Card/Cards.css
+++ b/src/Components/Card/Cards.css
@@ -13,6 +13,13 @@
   max-width: 450px;
 }
 
+@media screen and (min-width: 1250px) {
+  .card {
+    /* max-height: 300px; */
+    max-width: 100%;
+  }
+}
+
 .card::before {
   position: absolute;
   content: "";
@@ -36,7 +43,7 @@
 }
 
 .card-content {
-  margin: 2rem;
+  padding: 2rem;
 }
 
 /*Card image cover*/
@@ -65,6 +72,7 @@
   }
 }
 
+/* Card Header */
 .card-header h2 {
   font-size: 1.9rem;
   margin-bottom: 0.2rem;
@@ -106,9 +114,15 @@
   padding-bottom: 3rem;
 }
 
+@media screen and (min-width: 1250px) {
+  .card-body {
+    line-height: 1.5;
+    font-size: 1.5rem;
+  }
+}
+
 .card-cta {
   padding: 1rem;
-
   margin-right: 1rem;
   display: flex;
   align-items: center;
@@ -147,7 +161,7 @@
 }
 
 .container {
-  margin: 5rem 8%;
+  margin: 5rem;
 }
 
 /* Grid */
@@ -156,11 +170,12 @@
   display: grid;
   grid-template-columns: auto;
   gap: 6rem;
+  justify-content: center;
 }
 
 @media screen and (min-width: 1250px) {
   .grid {
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
+    grid-template-columns: repeat(2, minmax(auto, 700px));
+    grid-template-rows: repeat(2, 300px);
   }
 } ;
